# CipherBoard

./: .gitattributes  .gitignore  .gitleaks.toml  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRYPTO_PROTOCOL.md  LICENSE-BSD-3-Clause-NOTICES  LICENSE-BlueOak-1.0.0  LICENSE-MIT  LICENSES.md  PROJECT_CONTEXT.md  README.md  RELEASE.md  SECURITY.md  SECURITY_CHECKLIST.md  SECURITY_REVIEW.md  SIGNING_CERTIFICATE_SHA256  SUPPORT.md  TEST_PLAN.md  THIRD_PARTY_NOTICES.md  THREAT_MODEL.md  UPSTREAM.md  build.gradle.kts  gradle.properties  rust-toolchain.toml  settings.gradle
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  other.md
.github/workflows/: ci.yml  codeql.yml  instrumentation.yml  release.yml  security.yml  verify-published-release.yml
app/: build.gradle.kts  dontoptimize.pro  gradle.lockfile  lint.xml  proguard-test-rules.pro
crypto-core/: .gitignore  build.gradle.kts  consumer-rules.pro  gradle.properties  settings.gradle.kts
crypto-core/jni/: Cargo.toml
crypto-core/jni/src/: lib.rs  wire.rs
crypto-core/jni/tests/: dispatch.rs
crypto-core/native/: .gitignore  Cargo.toml
crypto-core/native/data/: README.md  generate_wordlists.ps1  words_en_v1.txt  words_ru_v1.txt
crypto-core/native/fuzz/: .gitignore  Cargo.toml  README.md
crypto-core/native/fuzz/corpus/transport_parser/: arbitrary-cb1  arbitrary-words  binary-cbor  malformed-text-envelope  valid-envelope  valid-round-trip  valid-text-envelope  valid-word-english  valid-word-russian
crypto-core/native/fuzz/fuzz_targets/: transport_parser.rs
crypto-core/native/src/: account.rs  envelope.rs  error.rs  ffi.rs  lib.rs  pairing.rs  presentation.rs  secret.rs  session.rs
crypto-core/native/tests/: presentation.rs  protocol.rs
docs/: ENVIRONMENT.md  GRAPHENEOS.md
docs/adr/: 0001-crypto-library.md  0002-word-transport.md
docs/releases/: v0.1.1.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md
docs/testing/: FUZZ_RESULTS.md
pairing/: README.md  build.gradle.kts  consumer-rules.pro  settings.gradle.kts
scripts/: _Common.ps1  _common.sh  apk_policy.py  build-debug.ps1  build-debug.sh  build-release.ps1  build-release.sh  kotlin_style_check.py  osv_offline_scan.py  release_bundle.py  release_metadata.py  security_source_scan.py  verify-apk.ps1  verify-apk.sh
scripts/tests/: test_apk_policy.py  (+3 more)
secure-storage/: README.md  build.gradle.kts  consumer-rules.pro  settings.gradle.kts
(+210 files in other folders)
