[package]
name = "cipherboard-crypto-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
base64 = "=0.22.1"
getrandom = "=0.2.16"
libfuzzer-sys = "=0.4.13"
minicbor = { version = "=0.25.1", features = ["std"] }
sha2 = "=0.10.9"

[[bin]]
name = "transport_parser"
path = "fuzz_targets/transport_parser.rs"
test = false
doc = false
bench = false

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"
